<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:clickable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/location_on_24" />

        <TextView
            android:id="@+id/locationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_layout"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/updateatTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/last_update"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/midContainerLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomContainer"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"

        android:layout_marginTop="59dp"

        android:layout_marginBottom="184dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skytype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/clear_sky"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tempTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/_22_c"
            android:textColor="@color/white"
            android:textSize="80sp" />


        <TextView
            android:id="@+id/feels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="05dp"
            android:text="@string/feels_like"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/min_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Min. Temp"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/max_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Max. Temp"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:paddingTop="5dp"
                    android:src="@drawable/sunrise"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/sunriseTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_00_am"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:paddingTop="5dp"
                    android:src="@drawable/sunset"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/sunsetTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:00 am"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:paddingTop="5dp"
                    android:src="@drawable/wind"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/windTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:00 am"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"/>


            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:src="@drawable/pressure"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pressure"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/pressureTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:00 am"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:src="@drawable/humidity"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Humidity"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/humidityTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:00 am"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:paddingTop="5dp"
                    android:src="@drawable/info"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/infoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_00_pm"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"/>


            </LinearLayout>



        </LinearLayout>



    </LinearLayout>

    <ProgressBar android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/something_went_wrong"/>




</RelativeLayout>
